# agent-tool-spec-pack

./: README.md  pyproject.toml
src/agent_tool_spec_pack/: __init__.py  docstring_parsers.py  pack.py  type_mapping.py  types.py
tests/: test_agent_tool_spec_pack.py  test_pack.py
